--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "esdev",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "main": "index.js",
   "type": "module",
   "license": "MIT",
   "dependencies": {
+    "acorn": "^7.2.0",
     "glob": "^7.1.6",
     "mime": "^2.4.5"
   },
   "bin": {
-    "esdev-serve": "./src/serve.js",
-    "esdev-build": "./src/build.js"
+    "esdev": "./index.js"
+  },
+  "devDependencies": {
+    "esbuild": "^0.2.11"
   }
 }
