--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "esdev",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "main": "index.js",
   "type": "module",
   "license": "MIT",
   "dependencies": {
     "acorn": "^7.2.0",
+    "esbuild": "^0.2.11",
     "mime": "^2.4.5"
   },
   "bin": {
     "esdev": "./index.js"
-  },
-  "devDependencies": {
-    "esbuild": "^0.2.11"
   }
 }
