--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "esdev",
-  "version": "0.0.19",
+  "version": "0.0.20",
   "main": "index.js",
   "type": "module",
   "license": "MIT",
   "dependencies": {
     "acorn": "^7.2.0",
     "esbuild": "^0.2.11",
-    "mime": "^2.4.5"
+    "mime": "^2.4.5",
+    "servor": "^3.3.1"
   },
   "bin": {
     "esdev": "./index.js"
   },
-  "devDependencies": {
-    "servor": "^3.3.1"
-  }
+  "devDependencies": {}
 }
